# crankshaft-tui

./: Cargo.toml
crankshaft-tui/: Cargo.toml
crankshaft-tui/src/: app.rs  event.rs  lib.rs  main.rs  ui.rs
tui-basics/src/: main.rs
